--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <header id="header">
       <img src="https://media.istockphoto.com/id/939144958/vector/guitar-stylized-icon-vector-simple-lines-acoustic-guitar-design-element.jpg?s=612x612&w=0&k=20&c=KOw-qKVwYAPgriQq4svN10gdHbzItr3bzQLLdXumops=" id="header-img">
       <nav id="nav-bar"> 
-        <a class="nav-link" href="#">Featured Product</a>
-        <a class="nav-link" href="#">About us</a>
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#main">Featured Product</a>
+        <a class="nav-link" href="#About-us">About us</a>
+        <a class="nav-link" href="#pricing">Pricing</a>
       </nav>
       </header>
         <h1>Welcome to Classical Guitars</h1>
       <p>Your source for premium classical guitars</p>
 <form id="form" action="https://www.freecodecamp.com/email-submit">
-  <input id="email" type="email" placeholder="Your email here" required>
+  <input name="email" id="email" type="email" placeholder="Your email here" required>
   <input id="submit" type="submit" value="Submit">
 </form>
-<div class="main">
+<div id="main">
   <h3>Premium Wood</h3>
   <p>Our classical guitars are crafted from the finest selection of premium wood, ensuring that every instrument delivers exceptional tone and resonance.</p>
   <i class='bx bx-music'></i>
@@ -40,10 +40,15 @@
 
 <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/e26zZ83Oh6Y?si=6v2wU2UuIsjCW7EE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+<div id="pricing">
+
+
+</div>
 
 <div class="chat-icon">
   <i class='bx bx-chat'></i>
 </div>
+<h2 id="About-us">About us</h2>
 <footer>
   <ul>
     <li>Privacy</li>
