styled the footer element

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <h2 id="About-us">About us</h2>
 <footer>
   <ul>
-    <li>Privacy</li>
-    <li>About</li>
-    <li>Careers</li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Careers</a></li>
     </ul>
 </footer>
 </body>
