added styles tot he main content, and added media query to adjust the view

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <a class="nav-link" href="#pricing">Pricing</a>
       </nav>
       </header>
+      <div class="above-form">
         <h1>Welcome to Classical Guitars</h1>
       <p>Your source for premium classical guitars</p>
+    </div>
 <form id="form" action="https://www.freecodecamp.com/email-submit">
   <input name="email" id="email" type="email" placeholder="Your email here" required>
-  <input id="submit" type="submit" value="Submit">
+  <input id="submit" type="submit" value="Get Started">
 </form>
 <div id="main">
   <h3>Premium Wood</h3>
