finished styles on everything but the prices section

--- a/index.html
+++ b/index.html
@@ -41,17 +41,23 @@
   </div>
 
 <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/e26zZ83Oh6Y?si=6v2wU2UuIsjCW7EE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<section id="price-section">
 
-<div id="pricing">
+<div class="price1"></div>
+<div class="price2"> </div>
+<div class="price3"></div>
 
 
-</div>
+</section>
 
-<div class="chat-icon">
-  <i class='bx bx-chat'></i>
-</div>
+  
+
+<div class="about">
 <h2 id="About-us">About us</h2>
-<footer>
+<p class="about-us-text">we are passionate artisans dedicated to handcrafting the finest guitars. Founded by a team of luthiers who share a love for music, our instruments are a harmonious blend of tradition and innovation, meticulously crafted to inspire your musical journey. Each guitar leaving our workshop is a testament to our commitment to excellence, preserving the art of
+   handmade craftsmanship. Discover the soulful resonance and artistry of our guitars and join us on this musical adventure."</p>
+  </div>
+   <footer>
   <ul>
     <li><a href="#">Privacy</a></li>
     <li><a href="#">About</a></li>
