structure for the pricing section created

--- a/index.html
+++ b/index.html
@@ -43,10 +43,36 @@
 <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/e26zZ83Oh6Y?si=6v2wU2UuIsjCW7EE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <section id="price-section">
 
-<div class="price1"></div>
-<div class="price2"> </div>
-<div class="price3"></div>
-
+<div class="price1 price-container">
+<div class="level">Beginner</div>
+<h2>$500</h2>
+<ol>
+  <li>Great for beginners</li>
+  <li>Same Premium Wood</li>
+  <li>Easy on the fingers</li>
+</ol>
+  <button class="btn">Buy Now</button>
+</div>
+<div class="price2 price-container"> 
+<div class="level">Intermediate</div>
+<h2>$1000</h2>
+<ol>
+  <li>Great for intermediate players</li>
+  <li>Same Premium Wood</li>
+  <li>Easy on the fingers</li>
+</ol>
+  <button class="btn">Buy Now</button>
+</div>
+<div class="price3 price-container">
+<div class="level">Advanced</div>
+<h2>$2000</h2>
+<ol>
+  <li>Great for advanced players</li>
+  <li>Same Premium Wood</li>
+  <li>Easy on the fingers</li>
+  </ol>
+  <button class="btn">Buy Now</button>
+</div>
 
 </section>
 
