--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="level">Beginner</div>
 <h2>$500</h2>
 <ol>
-  <li>Great for beginners</li>
+  <li>Great for beginner players</li>
   <li>Same Premium Wood</li>
   <li>Easy on the fingers</li>
 </ol>
